--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -7,6 +7,7 @@
         <link href="css/html-checker.css" rel="stylesheet">
     </head>
     <body>
+        <h1>HTML Dirty Code Report</h1>
         <div id="inputContainer">
             <h2>Input</h2>
             <div id="textInputContainer">
@@ -25,7 +26,7 @@
             </div>
         </div>
         <div class="report">
-            <h1>HTML Dirty Code Report</h1>
+            <h2>Report Card</h2>
             <div id="overall">
                 <div id="lineStats">
                     <h3>Lines of incorrect indentation: <span id="badIndentationCount"></span></h3>
@@ -33,44 +34,75 @@
                 </div>
                 <h2><span id="dirtyPercent"></span>% DIRTY</h2>
             </div>
-            <h4>Issues List</h4>
-            <div id="issuesList"></div>
+            <div id="issuesListContainer">
+                <h4>Issues List</h4>
+                <p>
+                    Below are the clean code issues this tool was able to detect in 
+                    your code.  However, note that this tool is best at detecting 
+                    syntax issues (i.e. issues with the grammar of a programming 
+                    language) and suggesting how to fix them. Logic errors, on the 
+                    other hand, are harder for it to target specifically.
+                </p>
+                <div id="issuesList"></div>
+            </div>
 
             <!-- 
         This is a comment 
              
             -->
-            <h4>Interactive Cleanup Helper</h4>
-            <div>
-                <h6>Legend</h6>
-                <div id="legendContainer">
-                    <div>
-                        <span class="block red"></span>
-                        <div>Dirty Code On or Near Line #</div>
-                    </div>
-                    <div>
-                        <span class="block lightblue"></span>
-                        <div>(On Hover) Clean Line</div>
-                    </div>
-                    <div>
-                        <span class="block purple"></span>
-                        <div>(On Hover) Matching Opening/Closing Tags</div>
-                    </div>
-                    <div>
-                        <span class="block pink"></span>
-                        <div>(On Hover) Dirty Line</div>
-                    </div>
-                    <div>
-                        <span class="block lightgreen"></span>
-                        <div>Good Indent Spaces</div>
-                    </div>
-                    <div>
-                        <span class="block lightred"></span>
-                        <div>Bad Indent Spaces (Outdent Them)</div>
-                    </div>
-                    <div>
-                        <span class="block orange"></span>
-                        <div> Bad Indent Spaces (Indent Them)</div>
+            <h4 id="cleanupHelperHeading">Interactive Cleanup Helper</h4>
+            <div id="helperContainer">
+                <h6>Directions</h6>
+                <p>
+                    The code below on the left is the raw, unedited code you 
+                    submitted to this tool;
+                    the code below on the right is same code, but processed to 
+                    fix your indentation issues. However, certain dirty code 
+                    issues (particularly logic errors) may prevent this tool 
+                    from correctly fixing your indentation, such as stray tags.
+                </p>
+                <p>
+                    Hover over a line or line number with an error, and the
+                    particular issues associated with that line will show up
+                    in a tool tip.
+                </p>
+                <p>
+                    We recommend addressing the issues from top to bottom.
+                    Sometimes, addressing an issue earlier on in your code
+                    can fix issues lower down.
+                </p>
+                
+                <div id="legendOuterContainer">
+                    <h6>Legend</h6>
+                    <div id="legendContainer">
+                        <div>
+                            <span class="block red"></span>
+                            <div>Dirty Code On or Near Line #</div>
+                        </div>
+                        <div>
+                            <span class="block lightblue"></span>
+                            <div>(On Hover) Clean Line</div>
+                        </div>
+                        <div>
+                            <span class="block purple"></span>
+                            <div>(On Hover) Matching Opening/Closing Tags</div>
+                        </div>
+                        <div>
+                            <span class="block pink"></span>
+                            <div>(On Hover) Dirty Line</div>
+                        </div>
+                        <div>
+                            <span class="block lightgreen"></span>
+                            <div>Good Indent Spaces</div>
+                        </div>
+                        <div>
+                            <span class="block lightred"></span>
+                            <div>Bad Indent Spaces (Outdent Them)</div>
+                        </div>
+                        <div>
+                            <span class="block orange"></span>
+                            <div> Bad Indent Spaces (Indent Them)</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -82,7 +114,7 @@
                 <div id="rawInput"></DIV>
             </div>
             <div>
-                <h5>Cleaned Code Input</h5>
+                <h5>Cleaned Code (Indentation Only)</h5>
             <div id="cleanedInput"></div>
                 </div>
     </div>
