--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,30 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 108 - Agenda for July 29th, 2024</h1>
-            <h3>Week 37 Day 3 (Career Development Week)</h3>
+            <h1>GDWD 108 - Agenda for July 30th, 2024</h1>
+            <h3>Week 37 Day 4 (Career Development Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What event are you most excited about in the Olympics?
-                            <br><br>
-                            Or, if you don't care much about the Olympics, 
-                            what event could be added to make you more interested?
+                            What is one skill that you were pleasantly surprised
+                            to learn from your time here at FIRST?
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container ">
                         <img 
-                            src="images/triathlete.jpg"
-                            alt="panda triathlete"
+                            src="images/knowledge-fox.webp"
+                            alt="knowledge fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Linkedin Review</li>
-                        <li><span class="type">Project (20%)</span>Interview Question Prep</li>
-                        <li><span class="type">Exercise</span>Resume Submission: Instructor Feedback</li>
+                        <li><span class="type">Exercise</span>Adobe Portfolio - Checkpoint</li>
                     </ul>
                 </div>
 
@@ -40,21 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Linkedin Review</li>
+                            <li><span class="type">PowerPoint</span>Introduction to Adobe Portfolio</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Project (20%)</span>Interview Question Prep</li>
+                            <li><span class="type">Exercise</span>Adobe Portfolio - Checkpoint</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Resume Submission: Instructor Feedback</li>
+                            <li><span class="type">Exercise</span>Adobe Portfolio - Checkpoint [cont.]</li>
                         </ul>
                     </div>
                 </div>
