--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 108 - Agenda for July 30th, 2024</h1>
-            <h3>Week 37 Day 4 (Career Development Week)</h3>
+            <h1>GDWD 108 - Agenda for July 31st, 2024</h1>
+            <h3>Week 37 Day 5 (Career Development Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is one skill that you were pleasantly surprised
-                            to learn from your time here at FIRST?
+                            When you were a child, what did you want to be 
+                            when you grew up?
                         </li>
                     </ul>
                     <div class="img-container ">
                         <img 
-                            src="images/knowledge-fox.webp"
-                            alt="knowledge fox"
+                            src="images/space-is-neat.jpg"
+                            alt="space kitteh"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Adobe Portfolio - Checkpoint</li>
+                        <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
                     </ul>
                 </div>
 
@@ -36,21 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Introduction to Adobe Portfolio</li>
+                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Adobe Portfolio - Checkpoint</li>
+                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Adobe Portfolio - Checkpoint [cont.]</li>
+                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
                         </ul>
                     </div>
                 </div>
