added url checker

--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -86,7 +86,7 @@
                 </div>
             </form>
             <div id="urlInputContainer">
-                <h3>URL Input (under construction)</h3>
+                <h3>URL Input</h3>
                 <input id="urlInput" value="">
                 <button id="urlSubmit">
                     SUBMIT
