--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 108 AGENDA (2018 Cohort)</title>
+        <title>GDWD 105 AGENDA (2021 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 108 - Agenda for July 31st, 2024</h1>
-            <h3>Week 37 Day 5 (Career Development Week)</h3>
+            <h1>GDWD 105 - Agenda for August 1st, 2024</h1>
+            <h3>Week 19 Day 1 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            When you were a child, what did you want to be 
-                            when you grew up?
+                            How do you feel about the idea of coding?
                         </li>
                     </ul>
                     <div class="img-container ">
                         <img 
-                            src="images/space-is-neat.jpg"
-                            alt="space kitteh"
+                            src="images/anxious.webp"
+                            alt="things that make me anxious"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>My First Blog Post</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
-                        <h3>Announcements (6pm-6:10pm)</h3>
+                        <h3>Introductions (6pm-6:10pm)</h3>
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final)</li>
+                            <li><span class="type">Resources</span>Course Overview and Policies</li>
+                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
+                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                            <li><span class="type">Demo</span>Intro to WordPress</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Adobe Portfolio Foundation (Final) [cont.]</li>
+                            <li><span class="type">Demo</span>Intro to WordPress (cont.)</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                 </div>
