updating tutorial for wordpress updates

--- a/cookbook/appetizers/setting-a-featured-image.html
+++ b/cookbook/appetizers/setting-a-featured-image.html
@@ -131,27 +131,6 @@
                             </p>
                             <p>
                                 Once you confirm you're in the <b>Post</b> tab,
-                                scroll down until you find the Featured Image
-                                drawer and click on it.
-                            </p>
-                        </div>
-                        <div class="imageContainer">
-                            <img 
-                                src="images/setting-a-featured-image/01_block-editor.png" 
-                                alt="Getting to the Featured Image drawer in the Block Editor"
-                            >
-                            <figcaption>
-                                Getting to the Featured Image drawer 
-                                in the Block Editor
-                            </figcaption>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="sideBySide">
-                        <div class="textContainer">
-                            <p>
-                                After opening the Featured Image drawer,
                                 you should see an empty gray rectangle with
                                 just the words "Set featured image".
                             </p>
@@ -161,11 +140,12 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/setting-a-featured-image/02_setfeaturedimage.png" 
-                                alt="The Featured Image drawer"
+                                src="images/setting-a-featured-image/01-02_new.png" 
+                                alt="Getting to the Featured Image button in the Block Editor"
                             >
                             <figcaption>
-                                The Featured Image drawer
+                                Getting to the Featured Image button 
+                                in the Block Editor
                             </figcaption>
                         </div>
                     </div>
@@ -176,18 +156,17 @@
                         <div class="textContainer">
                             <p>
                                 After clicking, a large dialog should appear,
-                                prompting you to select or upload image files.
+                                prompting you to select previously uploaded 
+                                image files from your Media Library.
                             </p>
                             <p>
-                                Alternatively, if you've previously uploaded 
-                                the image you want to use for the cover image,
-                                you can skip this step and go straight to the
-                                Media Library tab. 
+                                Alternatively, if you want to upload a new 
+                                image, you can click on the "Upload files" tab. 
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/setting-a-featured-image/03_media1.png" 
+                                src="images/setting-a-featured-image/03_media1_new.png" 
                                 alt="Uploading a featured image"
                             >
                             <figcaption>
@@ -200,11 +179,8 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                After uploading an image, you will be moved to
-                                the Media Library tab of the dialog.
-                            </p>
-                            <p class="indent">
-                                This tab will show ALL of the images you've 
+                                In the Media Library tab of the dialog, you will 
+                                see ALL of the images you've 
                                 uploaded to this particular WordPress site.
                             </p>
                             <p>
@@ -216,7 +192,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/setting-a-featured-image/03_media2.png" 
+                                src="images/setting-a-featured-image/03_media2_new.png" 
                                 alt="Selecting the featured image from the Media Library"
                             >
                             <figcaption>
@@ -254,7 +230,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/setting-a-featured-image/04_set.png" 
+                                src="images/setting-a-featured-image/04_new.png" 
                                 alt="The Featured Image is set"
                             >
                             <figcaption>
