--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 5th, 2024</h1>
-            <h3>Week 19 Day 2 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for August 6th, 2024</h1>
+            <h3>Week 19 Day 3 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Are you an early bird, or a night owl?
+                            Coffee? Tea? Or other?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-gray">
+                    <div class="img-container more-space light-green">
                         <img 
-                            src="images/night-owl.webp"
-                            alt="night owl"
+                            src="images/tea-rex.jpg"
+                            alt="tea-rex"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
+                        <li><span class="type">Exercise</span>Recipe Page</li>
                     </ul>
                 </div>
 
@@ -35,22 +35,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
-                            <li><span class="type">Demo</span>Customizing WordPress</li>
+                            <li><span class="type">Demo</span>Columns and Layouts, Anchors and Links</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Demo</span>Customizing WordPress (cont.)</li>
+                            <li><span class="type">Exercise</span>Recipe Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
+                            <li><span class="type">Exercise</span>Recipe Page [cont.]</li>
                         </ul>
                     </div>
                 </div>
