--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -25,7 +25,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Recipe Page</li>
+                        <li><span class="type">Exercise</span>Recipe Post</li>
                     </ul>
                 </div>
 
@@ -42,14 +42,14 @@
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Recipe Page</li>
+                            <li><span class="type">Exercise</span>Recipe Post</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Recipe Page [cont.]</li>
+                            <li><span class="type">Exercise</span>Recipe Post [cont.]</li>
                         </ul>
                     </div>
                 </div>
