--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 7th, 2024</h1>
-            <h3>Week 19 Day 4 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for August 8th, 2024</h1>
+            <h3>Week 19 Day 5 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            How do you feel about WordPress so far?
+                            <li>If you had to choose, would you pick extreme cold? or extreme heat?</li>
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container">
                         <img 
-                            src="images/overthinking.webp"
-                            alt="overthinking"
+                            src="images/procrastination.webp"
+                            alt="procrastination"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
-                        <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
-                        <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
+                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                     </ul>
                 </div>
 
@@ -37,23 +35,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Homepage Settings</li>
-                            <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
-                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page) [cont.]</li>
+                            <li><span class="type">Prep</span>Quiz 1 Study Hints</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                 </div>
