last dirty code addition?

--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -72,7 +72,9 @@
         </nav>
         
         <header id="title">
-            <h1>HTML Dirty Code Report</h1>
+            <h1>HTML Dirty Code Report
+                
+            </h1>
             <h3>Submit your code below to get your "Dirty Code Report Card"!</h3>
         </header>
 
@@ -91,7 +93,7 @@
                     <input 
                         id="urlInput" 
                         value=""
-                        placeholder="Paste the URL to your live site here..."
+                        placeholder="Paste the URL to your GitHub Pages site here..."
                     >
                 </div>
                 <div id="buttonContainer">
