--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -73,7 +73,7 @@
         
         <header id="title">
             <h1>HTML Dirty Code Report
-                
+
             </h1>
             <h3>Submit your code below to get your "Dirty Code Report Card"!</h3>
         </header>
@@ -106,6 +106,7 @@
         <div id="report" class="hide">
             <h2 id="reportHeader">Report Card</h2>
             <div id="innerReportContainer">
+                <h4>Statistics and Score</h4>
                 <div id="overall">
                     <div id="lineStats">
                         <h3>Lines of incorrect indentation: <span id="badIndentationCount"></span></h3>
@@ -131,11 +132,11 @@
                 -->
                 <h4 id="cleanupHelperHeading">Interactive Cleanup Helper</h4>
                 <div id="helperContainer">
-                    <h6>Directions</h6>
                     <p>
-                        The code below on the left is the raw, unedited code you 
-                        submitted to this tool;
-                        the code below on the right is same code, but processed to 
+                        The code below labeled "Raw Code Input" is the raw, 
+                        unedited code you submitted to this tool;
+                        the code below labeled "Cleaned Code" is same code, 
+                        but processed to 
                         fix your indentation issues. However, certain dirty code 
                         issues (particularly logic errors) may prevent this tool 
                         from correctly fixing your indentation, such as stray tags.
