adding in the dirty code report

--- a/cookbook/ingredients-cheatsheet.html
+++ b/cookbook/ingredients-cheatsheet.html
@@ -170,6 +170,7 @@
                         <div class="dropdown-items">
                             <h2><a href="ingredients.html">Elements</a></h2>
                             <h2><a href="ingredients-cheatsheet.html" class="selected">Cheatsheet</a></h2>
+                            <h2><a href="html-checker.html">Dirty Code Report</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
