--- a/cookbook/index.html
+++ b/cookbook/index.html
@@ -27,6 +27,7 @@
                         <div class="dropdown-items">
                             <h2><a href="ingredients.html">Elements</a></h2>
                             <h2><a href="ingredients-cheatsheet.html">Cheatsheet</a></h2>
+                            <h2><a href="html-checker.html">Dirty Code Report</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
