--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -13,18 +13,18 @@
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite restaurant?</li>
+                        <li>What is your favorite snack food/dessert?</li>
                     </ul>
-                    <div class="img-container more-space dark-red">
+                    <div class="img-container">
                         <img 
-                            src="images/pho-fox.webp"
-                            alt="pho-fox"
+                            src="images/snacks.webp"
+                            alt="snack panda"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Hello World</li>
                         <li><span class="type">Exercise</span>Basic HTML Drills</li>
+                        <li><span class="type">Exercise</span>Wiki Page</li>
                     </ul>
                 </div>
 
@@ -34,25 +34,26 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
-                            <li><span class="type">PowerPoint</span>HTML Tags and Elements</li>
+                            <li><span class="type">Kahoot</span>HTML Tags and Elements Review</li>
+                            <li><span class="type">PowerPoint</span>Clean Code - Part 1</li>
+                            <li><span class="type">Demo</span>HTML Lists | Parent/Child Relationships</li>
+                            
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Hello World</li>
-                            <li><span class="type">Demo</span>HTML Heading Elements</li>
-                            <li><span class="type">Demo</span>HTML Text Styling Elements</li>
+                            <li><span class="type">PowerPoint</span>HTML Attributes</li>
+                            <li><span class="type">Demo</span>HTML Images</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Clean Code (Part 1)</li>
-                            <li><span class="type">Exercise</span>Basic HTML Drills</li>
+                            <li><span class="type">PowerPoint</span>Clean Code (Part 2)</li>
+                            <li><span class="type">Exercise</span>Wiki Page</li>
                         </ul>
                     </div>
                 </div>
