--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 14th, 2024</h1>
-            <h3>Week 20 Day 4 (Intro to HTML Day 4)</h3>
+            <h1>GDWD 105 - Agenda for August 15th, 2024</h1>
+            <h3>Week 20 Day 5 (Intro to HTML Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite genre of story to read?</li>
+                        <li>What is one of your favorite TV series/anime?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space-offset">
                         <img 
-                            src="images/books_happy_place.jpg"
-                            alt="books happy place"
+                            src="images/tv.webp"
+                            alt="tv"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Wiki Page</li>
-                        <li><span class="type">Exercise</span>Recipe Page</li>
+                        <li><span class="type">Project</span>HTML Potluck</li>
                     </ul>
                 </div>
 
@@ -34,23 +33,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 2</li>
-                            <li><span class="type">Exercise</span>Wiki Page</li>
+                            <li><span class="type">Kahoot</span>Indentation Review</li>
+                            <li><span class="type">Kahoot</span>HTML Children Review</li>
+                            <li><span class="type">Project</span>HTML Potluck</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
-                            <li><span class="type">Demo</span>HTML Anchors (Links)</li>
+                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Recipe Page</li>
+                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
                         </ul>
                     </div>
                 </div>
