--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 15th, 2024</h1>
-            <h3>Week 20 Day 5 (Intro to HTML Day 5)</h3>
+            <h1>GDWD 105 - Agenda for August 16th, 2024</h1>
+            <h3>Week 21 Day 1 (Intro to HTML LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite TV series/anime?</li>
+                        <li>What do you think of HTML so far?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/tv.webp"
-                            alt="tv"
+                            src="images/lab-attire.webp"
+                            alt="lab in lab attire"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>HTML Potluck</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -33,23 +33,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Indentation Review</li>
-                            <li><span class="type">Kahoot</span>HTML Children Review</li>
-                            <li><span class="type">Project</span>HTML Potluck</li>
+                            <li><span class="type">Lab Time</span>Assignment Feedback</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
